# GTO-toolkit

./: LICENSE  README.md  pyproject.toml
sandbox/: plot.py  sandbox.py  test.py  test_input.txt
sandbox/H2/: H2_STO_6G.txt  H2_def2TZVPPD.txt
sandbox/H2O/: w_STO_6G.txt  w_def2QZVP.txt  w_def2QZVPD.txt  w_def2SVP.txt  w_def2SVPD.txt  w_def2TZVP.txt  w_def2TZVPPD.txt
sandbox/ethene/: ethene_STO_6G.txt  ethene_def2TZVP.txt
sandbox/formaldehyde/: formaldehyde_STO_6G.txt  formaldehyde_def2TZVP.txt
sandbox/methanol/: methanol_STO_6G.txt  methanol_def2SVPD.txt  methanol_def2TZVPD.txt
src/GTO_toolkit/: Analytical.py  Cholesky.py  DF_Kohn_Sham.py  Hartree_Fock.py  Important_products.py  Kohn_Sham.py  analytical_integrals.py  input.py  products.py  trial_density.py  utils.py
src/GTO_toolkit/grids/: Becke_partitioning.py  Lebedev_grids.py  basis_on_grid.py  grid_generation.py
src/GTO_toolkit/numerical_integrals/: integrands.py  integrator.py
